--- a/diet-ms-dev.properties
+++ b/diet-ms-dev.properties
@@ -1,3 +1,7 @@
+#Basics Settings
+spring.application.name=diet-ms
+server.port=8001
+
 # Eureka Client Settings
 eureka.client.register-with-eureka= true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
