--- a/life-control-back/diet-ms/src/main/resources/bootstrap.properties
+++ b/life-control-back/diet-ms/src/main/resources/bootstrap.properties
@@ -2,9 +2,7 @@
 spring.application.name=diet-ms
 
 # Config Server Setting
-spring.config.import=optional:configserver:http://localhost:8888/
+spring.cloud.config.uri=http://localhost:8888
+# spring.config.import=optional:configserver:http://localhost:8888/
 spring.profiles.active=dev
 management.endpoints.web.exposure.include=*
-
-
-#spring.cloud.config.uri=http://localhost:8888/
