--- a/diet-ms-dev.properties
+++ b/diet-ms-dev.properties
@@ -3,7 +3,7 @@ server.port=${PORT:0}
 
 # Eureka Client Settings
 eureka.client.register-with-eureka= true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Database Settings
