--- a/life-control-back/gateway-server/src/main/resources/application.properties
+++ b/life-control-back/gateway-server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8090
 
 # Eureka Client Settings
 eureka.client.register-with-eureka= true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Resilience4j Circuit Breaker Settings
