--- a/diet-ms-dev.properties
+++ b/diet-ms-dev.properties
@@ -9,7 +9,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 # Database Settings
 spring.datasource.url=jdbc:mysql://lifecontrol:3306/db_diet
 spring.datasource.username=root
-spring.datasource.password=210223
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
