--- a/diet-ms-dev.properties
+++ b/diet-ms-dev.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Database Settings
-spring.datasource.url=jdbc:mysql://localhost:3307/db_diet
+spring.datasource.url=jdbc:mysql://104.154.249.34/db_diet
 spring.datasource.username=root
 spring.datasource.password=210223
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
