--- a/life-control-back/diet-ms/src/main/resources/bootstrap.properties
+++ b/life-control-back/diet-ms/src/main/resources/bootstrap.properties
@@ -2,6 +2,6 @@
 spring.application.name=diet-ms
 
 # Config Server Setting
-spring.cloud.config.uri=http://config-server:8888
+spring.cloud.config.uri=http://localhost:8888
 spring.profiles.active=dev
 management.endpoints.web.exposure.include=*
