--- a/life-control-back/gateway-server/src/main/resources/application.properties
+++ b/life-control-back/gateway-server/src/main/resources/application.properties
@@ -7,26 +7,28 @@ eureka.client.register-with-eureka= true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-# Resilience4j Circuit Breaker Settings
-resilience4j.circuitbreaker.configs.default.sliding-window-size=6
-resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
-resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=20s
-resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=4
-resilience4j.circuitbreaker.configs.default.slow-call-rate-threshold=50
-resilience4j.circuitbreaker.configs.default.slow-call-duration-threshold=2s
-resilience4j.circuitbreaker.instances.diet.base-config: default
 
-# Resilience4j Time Limiter Settings
-resilience4j.timelimiter.configs.default.timeout-duration: 6s
-resilience4j.timelimiter.instances.diet.base-config: default
+# METER DEPENDENCIA REACTOR-RESILIENCE4J
+## Resilience4j Circuit Breaker Settings
+#resilience4j.circuitbreaker.configs.default.sliding-window-size=6
+#resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
+#resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=20s
+#resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=4
+#resilience4j.circuitbreaker.configs.default.slow-call-rate-threshold=50
+#resilience4j.circuitbreaker.configs.default.slow-call-duration-threshold=2s
+#resilience4j.circuitbreaker.instances.diet.base-config: default
+#
+## Resilience4j Time Limiter Settings
+#resilience4j.timelimiter.configs.default.timeout-duration: 6s
+#resilience4j.timelimiter.instances.diet.base-config: default
 
 # Gateway Settings
 spring.cloud.gateway.discovery.locator.enabled=false
 spring.cloud.gateway.routes[0].id=diet-ms
 spring.cloud.gateway.routes[0].uri=lb://DIET-MS
 spring.cloud.gateway.routes[0].predicates[0]=Path=/diet/**
-spring.cloud.gateway.routes[0].filters[0].name=CircuitBreaker
-spring.cloud.gateway.routes[0].filters[0].args.name=diet
-spring.cloud.gateway.routes[0].filters[0].args.statusCodes=500
-spring.cloud.gateway.routes[0].filters[0].args.fallbackUri=forward:/diet/ingredient/all
+#spring.cloud.gateway.routes[0].filters[0].name=CircuitBreaker
+#spring.cloud.gateway.routes[0].filters[0].args.name=diet
+#spring.cloud.gateway.routes[0].filters[0].args.statusCodes=500
+#spring.cloud.gateway.routes[0].filters[0].args.fallbackUri=forward:/diet/category/all
 
